prevent flickering rules UI when typing

--- a/src/app/rules/rules.component.css
+++ b/src/app/rules/rules.component.css
@@ -11,6 +11,10 @@
   color: red;
 }
 
+.info {
+  color: orange;
+}
+
 .success {
   color: green;
 }
